johnlimadev/force-app/main/default/objects/Aluno__c/fields/Any_Number__c.field-meta.xml
<CustomField>
    <fullName>Any_Number__c</fullName>
    <label>Any Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>