johnlimadev/force-app/main/default/objects/Aluno__c/fields/Curso__c.field-meta.xml
<CustomField>
    <fullName>Curso__c</fullName>
    <label>Curso</label>
    <type>TextArea</type>
</CustomField>