johnlimadev/force-app/main/default/objects/Aluno__c/fields/Somedate__c.field-meta.xml
<CustomField>
    <fullName>Somedate__c</fullName>
    <label>Somedate</label>
    <type>DateTime</type>
</CustomField>